tests/e2e/semantics/when_return_no_value2.error
Error: syntax error in story at line 3, column 5

3|        return a
          ^^^^^^^^

E0159: Cannot return values from `when` block.
