tests/e2e/semantics/when_return_no_value2.story
when http server listen path: "/" as r
    a = 1
    return a
